--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.13.1",
     "firebase": "^12.4.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
