--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
+    "@tanstack/react-query": "^5.90.5",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.13.1",
     "firebase": "^12.4.0",
